fix: removes horizontal scroll on /bookmarks and change `after:` for `underline`

--- a/src/globals.css
+++ b/src/globals.css
@@ -38,7 +38,7 @@
 }
 
 a {
-	@apply relative w-max no-underline text-primary after:content-[''] after:absolute after:bottom-0 after:left-0 after:w-full after:h-[1px] after:bg-primary;
+	@apply relative underline text-primary;
 }
 ::selection {
 	@apply text-background bg-secondary;
